-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.6.1
-
None
-
Windows 7, MSVC 2015
ICU can build a stub icudtXX.dll that is only 3K in size and missing a lot of data. Attempts to access this data result in E_FILE_ACCESS_ERROR inside ICU and causes many of the functions to return 0/null. QtCreator behaviorsettingswidget.cpp around line 71 calls QTextCodec::codecForMib(), which in my case returned a null QTextCodec. The next line of code calls for codec->name() on the null QTextCodec, resulting in the crash. Obviously a properly built ICU would be the ideal resolution, but QtCreator should not crash. The end goal for this chunk of code is to populate Tools, Options, Text Editor, File Encodings, Default encoding combo box, there could be a reasonable fallback or just an empty combo box should the QTextCodec::codecForMib fail.
For Gerrit Dashboard: QTCREATORBUG-16114 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156333,2 | Editor: Check if text codec pointer is valid. | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |