Editor: Check if text codec pointer is valid.

Fixes a crash when collecting codecs for opions page and a unsupported
icu is used.

Task-number: QTCREATORBUG-16114
Change-Id: I4081748f636602670e37465750862d4da4a14941
Reviewed-by: Eike Ziller <eike.ziller@qt.io>